@@ -69,7 +69,7 @@ end
 
 $objs = ["oci8lib.o", "env.o", "error.o", "oci8.o",
          "stmt.o", "bind.o", "metadata.o", "attr.o",
-         "rowid.o", "lob.o", "oradate.o",
+         "lob.o", "oradate.o",
          "ocinumber.o", "ocidatetime.o", "object.o", "apiwrap.o",
          "xmldb.o"]
 
