@@ -148,7 +148,6 @@ Init_oci8lib()
     Init_oci8_stmt(cOCI8);
 
     /* register allocators */
-    Init_oci8_rowid();
     Init_oci8_metadata(cOCI8);
     Init_oci8_lob(cOCI8);
 
